Gradle migration, fixes few deprecated issues