@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2017 Emmanuel Keller / QWAZR
+ * Copyright 2015-2019 Emmanuel Keller / QWAZR
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,25 +27,25 @@ import java.io.IOException;
 
 public class SmartAnalyzerSetTest {
 
-	private void checkAnalyzer(Class<? extends Analyzer> analyzerClass)
-			throws IllegalAccessException, InstantiationException, IOException {
-		Assert.assertNotNull(analyzerClass);
-		Analyzer analyzer = analyzerClass.newInstance();
-		Assert.assertNotNull(analyzer);
-		Assert.assertEquals(100, analyzer.getPositionIncrementGap(""), 0);
-		try (final TokenStream tokenStream = analyzer.tokenStream("", RandomUtils.alphanumeric(10))) {
-			tokenStream.reset();
-			while (tokenStream.incrementToken()) {
-			}
-		}
-	}
+    private void checkAnalyzer(Class<? extends Analyzer> analyzerClass)
+            throws IOException, ReflectiveOperationException {
+        Assert.assertNotNull(analyzerClass);
+        Analyzer analyzer = analyzerClass.getDeclaredConstructor().newInstance();
+        Assert.assertNotNull(analyzer);
+        Assert.assertEquals(100, analyzer.getPositionIncrementGap(""), 0);
+        try (final TokenStream tokenStream = analyzer.tokenStream("", RandomUtils.alphanumeric(10))) {
+            tokenStream.reset();
+            while (tokenStream.incrementToken()) {
+            }
+        }
+    }
 
-	@Test
-	public void testAll() throws IllegalAccessException, InstantiationException, IOException {
-		for (SmartAnalyzerSet smartAnalyzer : SmartAnalyzerSet.values()) {
-			checkAnalyzer(smartAnalyzer.indexAnalyzer);
-			checkAnalyzer(smartAnalyzer.queryAnalyzer);
-		}
+    @Test
+    public void testAll() throws ReflectiveOperationException, IOException {
+        for (SmartAnalyzerSet smartAnalyzer : SmartAnalyzerSet.values()) {
+            checkAnalyzer(smartAnalyzer.indexAnalyzer);
+            checkAnalyzer(smartAnalyzer.queryAnalyzer);
+        }
 
-	}
+    }
 }
